std error responses, first pass
