# public/swagger.json
@@ -45,6 +45,22 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"ResponseError": {
+				"properties": {
+					"message": {
+						"type": "string"
+					},
+					"code": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"message",
+					"code"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"roles": {
 				"enum": [
 					"admin",
@@ -125,6 +141,26 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/TableResponse_User_"
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "Standard API error response",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ResponseError"
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "Standard API error response",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ResponseError"
 								}
 							}
 						}
